--- a/swi/pyvenv.cfg
+++ b/swi/pyvenv.cfg
@@ -1,5 +1,3 @@
-home = C:\Users\proko\AppData\Local\Microsoft\WindowsApps\PythonSoftwareFoundation.Python.3.12_qbz5n2kfra8p0
+home = /Library/Developer/CommandLineTools/usr/bin
 include-system-site-packages = false
-version = 3.12.0
-executable = C:\Users\proko\AppData\Local\Microsoft\WindowsApps\PythonSoftwareFoundation.Python.3.12_qbz5n2kfra8p0\python.exe
-command = C:\Users\proko\AppData\Local\Microsoft\WindowsApps\PythonSoftwareFoundation.Python.3.12_qbz5n2kfra8p0\python.exe -m venv C:\UJEP\SWI_semestralka\used_sources_database\swi
+version = 3.9.6
