--- a/.gitignore
+++ b/.gitignore
@@ -183,3 +183,33 @@ swi/Scripts/pip3.12.exe
 swi/Scripts/pip3.exe
 swi/Scripts/python.exe
 swi/Scripts/pythonw.exe
+._.vscode
+books.sqlite
+docker-compose.yml
+.vscode/._settings.json
+.vscode/settings.json
+swi/Include/site/python3.12/greenlet/greenlet.h
+swi/Scripts/activate
+swi/Scripts/activate.bat
+swi/Scripts/Activate.ps1
+swi/Scripts/deactivate.bat
+swi/Scripts/flask.exe
+swi/Scripts/pip.exe
+swi/Scripts/pip3.12.exe
+swi/Scripts/pip3.exe
+swi/Scripts/python.exe
+swi/Scripts/pythonw.exe
+testing/._automatised_testing.py
+books.sqlite
+docker-compose.yml
+swi/Include/site/python3.12/greenlet/greenlet.h
+swi/Scripts/activate
+swi/Scripts/activate.bat
+swi/Scripts/Activate.ps1
+swi/Scripts/deactivate.bat
+swi/Scripts/flask.exe
+swi/Scripts/pip.exe
+swi/Scripts/pip3.12.exe
+swi/Scripts/pip3.exe
+swi/Scripts/python.exe
+swi/Scripts/pythonw.exe
